Fix fullpage clipping: overflow on #fullpage hid all sections after home.

--- a/public/css/main_v_4.css
+++ b/public/css/main_v_4.css
@@ -604,6 +604,10 @@ html {
     width: 100%;
     height: 100%;
 }
+.content.fullpage-wrapper,
+#fullpage.fullpage-wrapper {
+    height: auto;
+}
 .content__slide {
 	width: 100%;
 	min-height: 100%;
